# bitfield-rule30

./: CHANGELOG  Makefile.in  README  README.md  config.h.in  configure  configure.ac  rule30.c  rule30.h
examples/: Makefile.in  rule30_rev_bit.c
man/: Makefile.in  rule30.3  rule30_parents_new.3  rule30_rev_bit.3  rule30_rev_ring.3  rule30_rev_string.3  rule30_ring.3  rule30_ringify.3  rule30_string.3
tests/: Makefile.in  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c
